--- a/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
+++ b/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
@@ -1,11 +1,11 @@
 <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-    <div class="card card-product m-3 shadow">
-        <div class="img-placeholder ">
+    <div class="card my-3 shadow card-product">
+        <div class="img-placeholder">
             <svg class="card-img-top img-placeholder">
                 <rect width="100%" height="100%" fill="#868e96"></rect>
             </svg>
         </div>
-        <div class="card-body card-body-product text-center">
+        <div class="card-body card-body-product text-center placeholder-glow">
             <h5 class="card-title fw-bold">Új termék hozzáadása
             </h5>
             <p class="card-text">
@@ -16,7 +16,7 @@
                 <span class="placeholder col-8"></span>
             </p>
         </div>
-        <div class="btn-group mx-2 mb-3">
+        <div class="btn-group mx-2 px-1 mb-3 bottom">
             <a [routerLink]="['/add-product']" [queryParams]="{edit: false}" class="btn btn-primary w-75">
                 <fa-icon [icon]="faPlus"></fa-icon>
             </a>
@@ -24,29 +24,6 @@
     </div>
 </div>
 <div *ngFor="let product of products" class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3">
-    <!-- <div class="card card-product m-3 shadow">
-        <div class="img-placeholder ">
-            <p *ngIf="product.isPublic != true" class="warning text-center"><fa-icon [icon]="faExclamationTriangle"></fa-icon> Ez a termék nem publikus. <a href="" class="text-dark">Tedd közzé.</a> </p>
-            <img src="{{product.imgUrl}}" class="card-img-top img-product" alt="...">
-        </div>
-        <div class="card-body card-body-product text-center">
-            <h5 class="card-title fw-bold" [class.fit-text]="product.name.length> 20">{{product.name}}
-            </h5>
-            <p class="card-text text-primary m-1">{{product.sellerFirstName}}</p>
-            <h4 class="m-0 fw-bold">{{product.price|price}}</h4>
-        </div>
-        <div class="btn-group mx-2 mb-3">
-            <a href="#" class="btn btn-primary">
-                <fa-icon [icon]="faEdit"></fa-icon>
-            </a>
-            <a href="#" class="btn btn-danger">
-                <fa-icon [icon]="faTrash"></fa-icon>
-            </a>
-            <a href="#" class="btn btn-secondary">
-                <fa-icon [icon]="faMore"></fa-icon>
-            </a>
-        </div>
-    </div> -->
     <div class="card my-3 shadow card-product">
         <div class="img-placeholder">
             <p *ngIf="!product.isPublic" class="warning text-center">
