--- a/agora-angular/src/app/order-tracking/order-tracking.component.scss
+++ b/agora-angular/src/app/order-tracking/order-tracking.component.scss
@@ -8,3 +8,7 @@
 .progress-circle{
     margin-bottom: -2rem;
 }
+.bg-arrived{
+    background-color: #859c623b !important;
+    border-radius: 1rem;
+}
