--- a/agora-angular/src/app/account-forms/signup-vendor/signup-vendor.component.html
+++ b/agora-angular/src/app/account-forms/signup-vendor/signup-vendor.component.html
@@ -33,7 +33,7 @@
                 <input type="tel" class="form-control short" formControlName="phone" id="phone" placeholder="">
             </div>
             <div class="mb-3">
-                <label for="company" class="form-label mb-1">Hely <small>(város, település)</small> </label>
+                <label for="company" class="form-label mb-1">Telephely <small>(város, település)</small> </label>
                 <input type="text" class="form-control short" formControlName="company" id="company" placeholder="">
             </div>
             <div class="mb-3">
