--- a/agora-angular/src/app/messages-page/messages/messages.component.html
+++ b/agora-angular/src/app/messages-page/messages/messages.component.html
@@ -28,7 +28,8 @@
         </div>
         <div *ngFor="let message of messages; let i = index">
             <div class="row d-felx m-2" [ngClass]="{'justify-content-end':(!message.recived), 'justify-content-start':message.recived}">
-                <p class="col-auto message p-2 my-2" [ngClass]="{'message-sent':(!message.recived), 'message-recived':message.recived, 'message-recived-burger-top':message.recived && messages[i+1].recived}">{{message.message}}</p>
+                <p *ngIf="message.recived" class="col-auto message p-2 my-2 message-recived" [ngClass]="{'message-recived-burger-top':message.recived && messages[i+1].recived}">{{message.message}}</p>
+                <p *ngIf="!message.recived" class="col-auto message p-2 my-2 message-sent">{{message.message}}</p>
             </div>
         </div>
         <div class="place-holder"></div>
