--- a/agora-angular/src/app/messages-page/messages-page.component.scss
+++ b/agora-angular/src/app/messages-page/messages-page.component.scss
@@ -1,4 +1,10 @@
-.profile-picture{
-    border-radius: 50%;
-    height: 4rem;
+$secondary: #c0c0c0;
+$secondary-alfa: #c0c0c03b;
+
+.profile-picture {
+  border-radius: 50%;
+  height: 4rem;
+}
+.contact:hover {
+  background-color: $secondary-alfa;
 }
