--- a/agora-angular/src/app/messages-page/messages/messages.component.html
+++ b/agora-angular/src/app/messages-page/messages/messages.component.html
@@ -27,9 +27,8 @@
             <p class="col-auto message message-sent p-2 my-4">Szia</p>
         </div>
         <div *ngFor="let message of messages; let i = index">
-            <div class="row d-felx m-2" [ngClass]="{'justify-content-end':(!message.recived), 'justify-content-start':message.recived}">
-                <p *ngIf="message.recived" class="col-auto message p-2 my-2 message-recived" [ngClass]="{'message-recived-burger-top':message.recived && messages[i+1].recived}">{{message.message}}</p>
-                <p *ngIf="!message.recived" class="col-auto message p-2 my-2 message-sent">{{message.message}}</p>
+            <div class="row d-felx mx-1 my-0" [ngClass]="{'justify-content-end':(!message.recived), 'justify-content-start':message.recived}">
+                <p class="col-auto message p-2" [class]="getStyle(message.messageId)">{{message.message}}</p>
             </div>
         </div>
         <div class="place-holder"></div>
