--- a/agora-angular/src/app/messages-page/messages-page.component.html
+++ b/agora-angular/src/app/messages-page/messages-page.component.html
@@ -13,8 +13,8 @@
                             </svg>
                         </div>
                         <div class="col-auto">
-                            <h5 class="fw-bold mb-0 mt-1">{{contact.name}}</h5>
-                            <p>{{contact.lastMessage}}</p>
+                            <h5 class="fw-bold mb-0 mt-1">{{contact.lastName}} {{contact.firstName}}</h5>
+                            <!-- <p>{{contact.lastMessage}}</p> -->
                         </div>
                     </div>
                     <hr class="m-0 p-0">
