--- a/agora-angular/src/app/messages-page/messages/messages.component.html
+++ b/agora-angular/src/app/messages-page/messages/messages.component.html
@@ -5,29 +5,8 @@
     <div class="scroll m-3">
         <div class="place-holder"></div>
         <h1 class="display-1">Ez a beszélgetés kezdete</h1>
-        <div class="row d-felx justify-content-start m-2">
-            <p class="col-auto message message-recived p-2 my-4">Jónapot kívánok! A termékei iránt érdeklőnék.</p>
-        </div>
-        <div class="row d-felx justify-content-end m-2">
-            <p class="col-auto message message-sent p-2 my-4">Jónapot! Mi érdekelné pontoson?</p>
-        </div>
-        <div class="row d-felx justify-content-start m-2">
-            <p class="col-auto message message-recived p-2 my-4">Rendelésre készít még olyanokat mint múltkor?</p>
-        </div>
-        <div class="row d-felx justify-content-end m-2 mb-0">
-            <p class="col-auto message message-sent message-sent-burger-top p-2 my-4 mb-0">Neked bármikor <3 </p>
-        </div>
-        <div class="row d-felx justify-content-end me-2">
-            <p class="col-auto message message-sent message-sent-burger-bottom p-2 my-1">Pusz, pusz! </p>
-        </div>
-        <div class="row d-felx justify-content-start m-3">
-            <p class="col-auto message message-recived p-2 my-4">Szia</p>
-        </div>
-        <div class="row d-felx justify-content-end m-3">
-            <p class="col-auto message message-sent p-2 my-4">Szia</p>
-        </div>
         <div *ngFor="let message of messages; let i = index">
-            <div class="row d-felx mx-1 my-0" [ngClass]="{'justify-content-end':(!message.recived), 'justify-content-start':message.recived}">
+            <div class="row d-felx mx-1 my-0" [ngClass]="{'justify-content-end':(message.recived), 'justify-content-start':!message.recived}">
                 <p class="col-auto message p-2" [class]="getStyle(message.messageId)">{{message.message}}</p>
             </div>
         </div>
@@ -35,8 +14,8 @@
     </div>
     <div class="bottom frosted-glass border-top w-100">
         <div class="input-group m-2 pe-3">
-            <input type="text" name="message" id="message" class="form-control">
-            <button class="btn btn-secondary">
+            <input type="text" name="message" id="message" class="form-control" [(ngModel)]="message">
+            <button class="btn btn-secondary" (click)="send()">
                 <fa-icon [icon]="faPaperPlane" class="me-1"></fa-icon>
             </button>
         </div>
