--- a/agora-angular/src/app/front-page/front-page.component.html
+++ b/agora-angular/src/app/front-page/front-page.component.html
@@ -4,7 +4,7 @@
         <div class="card text-center m-2 my-3 p-1 m-md-4 p-md-3 frosted-glass">
             <div class="card-body">
                 <img src="assets/logo-full.svg" style="height: 4rem;">
-                <h1 class="slogen m-2 mb-3">Vegyél helyi gyümölcsöt!</h1>
+                <h1 class="slogen m-2 mb-3">Vegyél helyi termékeket!</h1>
                 <div class="input-group justify-content-center mx-auto w-75">
                     <a href="#" class="btn btn-primary search-btn">
                         <fa-icon [icon]="faSearch"></fa-icon>
