--- a/agora-angular/src/app/order-tracking/order-tracking.component.html
+++ b/agora-angular/src/app/order-tracking/order-tracking.component.html
@@ -16,12 +16,12 @@
                             <fa-icon [icon]="faLongArrowAltUp"></fa-icon>
                         </div>
                         <div class="col-3 mb-0 text-end pe-4">
-                            <span [ngClass]="{'fw-bold':('Delivery in progress' == order.status)}">Szállítás folyamatbant </span>
+                            <span [ngClass]="{'fw-bold':('Delivery in progress' == order.status)}">Szállítás folyamatban </span>
                             <fa-icon [icon]="faLongArrowAltUp"></fa-icon>
                         </div>
                         <div class="col-3 mb-0 text-end pe-4">
                             <span [ngClass]="{'fw-bold':('Arrived' == order.status)}">Megérkezett </span>
-                            <fa-icon [icon]="faLongArrowAltUp"></fa-icon> 
+                            <fa-icon [icon]="faLongArrowAltUp"></fa-icon>
                         </div>
                     </div>
                     <div class="row">
