--- a/agora-angular/src/app/account-forms/signup-customer/signup-customer.component.html
+++ b/agora-angular/src/app/account-forms/signup-customer/signup-customer.component.html
@@ -1,24 +1,24 @@
 <account-form>
     <h2 class="text-center mb-3">Regisztráció</h2>
-    <form #myform="ngForm" (ngSubmit)="onSubmit(myform)">
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
         <div class="mb-3 form-group">
             <label for="last-name" class="form-label mb-1">Vezetéknév </label>
-            <input id="last-name" type="text" name="lastName" class="form-control short" ngModel>
+            <input id="last-name" type="text" name="lastName" class="form-control short" formControlName="lastName">
         </div>
         <div class="mb-3 form-group">
             <label for="first-name" class="form-label mb-1">Keresztnév </label>
-            <input id="first-name" type="text" name="firstName" class="form-control short" ngModel>
+            <input id="first-name" type="text" name="firstName" class="form-control short" formControlName="firstName">
         </div>
         <div class="mb-3 form-group">
             <label for="email" class="form-label mb-1">Email cím</label>
-            <input type="email" class="form-control short" name="email" id="email" placeholder="name@example.com" ngModel>
+            <input type="email" class="form-control short" name="email" id="email" formControlName="email">
         </div>
         <div class="mb-3 form-group">
             <label for="password" class="form-label mb-1">Jelszó</label>
-            <input type="password" class="form-control short" name="password" id="password" placeholder="" ngModel>
+            <input type="password" class="form-control short" name="password" id="password" formControlName="password">
         </div>
         <div class="mb-3">
-            <button type="submit" class="btn btn-primary w-100">Regisztráció</button>
+            <button type="submit" class="btn btn-primary w-100" [disabled]="!signupForm.valid">Regisztráció</button>
         </div>
         <div class="text-center mb-0 pb-0">
             <a class="btn small" [routerLink]="['/login']">Már van fiókom</a>
