--- a/agora-angular/src/app/nav/footer/footer.component.html
+++ b/agora-angular/src/app/nav/footer/footer.component.html
@@ -12,7 +12,7 @@
                 <li><a class="link-secondary text-decoration-none" [routerLink]="['/best']">A szezon legjobbjai</a></li>
                 <li><a class="link-secondary text-decoration-none" [routerLink]="['/about']">Rólunk</a></li>
                 <li><a class="link-secondary text-decoration-none" [routerLink]="['/new']">Újdonságok</a></li>
-                <li><a class="link-secondary text-decoration-none" [routerLink]="['/']">Hírlevél</a></li>
+                <li><a class="link-secondary text-decoration-none" [routerLink]="['/guide']">Segítség</a></li>
               </ul>
             </div>
             <div class="col-6 col-md">
