--- a/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.html
+++ b/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.html
@@ -3,10 +3,12 @@
         <div class="row mb-3">
             <div class="col">
                 <div class="header" style="background-image: url('{{user.headerImgUrl}}');"></div>
-                <img class="p-2 round profile-picture shadow" src="{{user.profileImgUrl}}" alt="">
-                <a href="" class="btn bg-white my-2 profile-btn shadow">
-                    <fa-icon [icon]="faCamera"></fa-icon>
-                </a>
+                <div class="mt-4">
+                  <img class="p-2 round bg-white profile-picture shadow" src="{{user.profileImgUrl}}" alt="">
+                  <div class="btn bg-white my-2 profile-btn shadow" (click)="uploadOpen=true">
+                      <fa-icon [icon]="faCamera"></fa-icon>
+                  </div>
+                </div>
             </div>
             <!-- <div class="col">
                 <img src="" alt="" src="{{user.headerImgUrl}}" class="header">
@@ -64,3 +66,25 @@
         </div>
     </form>
 </div>
+<modal-window [(modalVisible)]="uploadOpen" title="Képek feltöltése">
+  <div>
+    <form enctype="multipart/form-data">
+      <div class="my-3">
+        <label for="profilePicture" class="form-label mb-1">Profilkép kiválasztása</label>
+        <input type="file" class="form-control" id="profilePicture" name="profilePicture" formControlName="profilePicture"
+          (change)="pictureSelected($event)">
+      </div>
+    </form>
+    <div class="mx-1">
+      <small class="">
+        <p class="mb-0">
+
+        </p>
+      </small>
+    </div>
+    <div class="d-flex justify-content-between">
+      <a (click)="uploadOpen = false" href="#" class="btn btn-secondary">Mégse</a>
+      <button (click)="onUpload()" type="submit" class="btn btn-primary">Kész</button>
+    </div>
+  </div>
+</modal-window>
