--- a/agora-angular/src/app/account-forms/signup-customer/signup-customer.component.html
+++ b/agora-angular/src/app/account-forms/signup-customer/signup-customer.component.html
@@ -17,6 +17,10 @@
             <label for="password" class="form-label mb-1">Jelszó</label>
             <input type="password" class="form-control short" name="password" id="password" formControlName="password">
         </div>
+        <div class="form-check mb-2 mt-0">
+            <input class="form-check-input" type="checkbox" name="check" id="check" (change)="onCheckboxChange($event)" [checked]="isChecked">
+            <label class="form-check-label" for="check">Regisztráció eladóként</label>
+        </div>
         <div class="mb-3">
             <button type="submit" class="btn btn-primary w-100" [disabled]="!signupForm.valid">Regisztráció</button>
         </div>
