--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -11,9 +11,9 @@
             <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="#" (click)="toggleCategory($event)" [class.selected]="openView == 'category'"
                         class="nav-link-selectable nav-link px-2 link-dark">Kategóriák</a></li>
-                <li><a href="#" (click)="toggleBestView($event)" [class.selected]="openView == 'best'"
+                <li><a href="#" [routerLink]="['/best']" [class.selected]="_router.url == '/best'"
                         class="nav-link-selectable nav-link px-2 link-dark">A szezon legjobbjai</a></li>
-                <li><a href="#" (click)="toggleNowView($event)" [class.selected]="openView == 'now'"
+                <li><a href="#" [routerLink]="['/now']" [class.selected]="_router.url == '/now'"
                         class="nav-link-selectable nav-link px-2 link-dark">Most</a></li>
             </ul>
 
