--- a/agora-angular/src/app/front-page/front-page.component.html
+++ b/agora-angular/src/app/front-page/front-page.component.html
@@ -3,7 +3,12 @@
     <div class="container d-flex flex-wrap align-items-center justify-content-center">
         <div class="card text-center m-2 my-3 p-1 m-md-4 p-md-3 frosted-glass">
             <div class="card-body">
-                <img src="assets/logo-full.svg" style="height: 4rem;">
+                <div class="d-flex justify-content-center">
+                    <img src="assets/logo.svg" class="me-2" height="42" alt="">
+                    <h1 class="logo-text">
+                      AGORA
+                    </h1>
+                </div>
                 <h1 class="slogen m-2 mb-3">Vegyél helyi termékeket!</h1>
                 <div class="input-group justify-content-center mx-auto w-75">
                     <a href="#" class="btn btn-primary search-btn">
@@ -13,14 +18,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container d-flex flex-wrap align-items-center justify-content-center">
-        <!-- <div class="btn-group mx-2 mb-4">
-            <a [routerLink]="['.']" fragment="products" class="btn btn-primary frosted-glass">
-                <fa-icon [icon]="faChevronDown"></fa-icon>
-                Ajánlatok neked
-            </a>
-        </div> -->
     </div>
 </div>
 
