--- a/agora-angular/src/app/front-page/front-page.component.scss
+++ b/agora-angular/src/app/front-page/front-page.component.scss
@@ -30,3 +30,7 @@ a.frosted-glass:hover{
   background-color: rgba(255, 255, 255, .25);
   backdrop-filter: blur(10px);
 }
+.logo-text{
+    color: #342A2B;
+    font-family: 'IM Fell English', serif;
+  }
