--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -19,15 +19,16 @@
 
             <div *ngIf="isLoggedIn()" class="col-md-3 text-end loggedin-nav">
                 <a [routerLink]="['/notifications']" class="btn p-1 m-1 btn-cart">
-                    <fa-layers [fixedWidth]="true">
+                    <fa-layers [fixedWidth]="true" class="icon">
                         <fa-icon [icon]="faBell"></fa-icon>
-                        <fa-layers-counter content=" "></fa-layers-counter>
+                        <!-- <fa-layers-counter [content]="unreadNotifCount()"></fa-layers-counter> -->
+                        <fa-layers-counter *ngIf="unreadNotifCount() != '0'" [content]="unreadNotifCount()" class="notif"></fa-layers-counter>
                     </fa-layers>
                 </a>
                 <a [routerLink]="['/cart']" class="btn p-1 m-1 btn-cart">
-                    <fa-layers [fixedWidth]="true">
+                    <fa-layers [fixedWidth]="true" class="icon">
                         <fa-icon [icon]="faShoppingCart"></fa-icon>
-                        <fa-layers-counter content=" "></fa-layers-counter>
+                        <fa-layers-counter *ngIf="cartItemCount() != '0'" [content]="cartItemCount()" class="notif"></fa-layers-counter>
                     </fa-layers>
                 </a>
                 <a (click)="toggleCart($event)" href="/my-profile" class="p-1 m-1">
