--- a/agora-angular/src/app/checkout/checkout.component.html
+++ b/agora-angular/src/app/checkout/checkout.component.html
@@ -16,7 +16,8 @@
                         <td>{{product.name}}</td>
                         <td class="text-center">{{product.amount}} db</td>
                         <td *ngIf="!product.discount" class="text-end">{{product.price|price}}</td>
-                        <td *ngIf="product.discount" class="text-end">{{product.price * (1 - (product.discount / 100))|price}}</td>
+                        <td *ngIf="product.discount" class="text-end">{{product.price * (1 - (product.discount /
+                            100))|price}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -46,11 +47,15 @@
         </a>
     </div>
 </div>
-<!-- <modal-window [(modalVisible)]="modalOpen" [allowClose]="false" [title]="'Feldolgozás'">
-    <div class="text-center p-3 border-top mt-2">
-      <p class="large">
-        <fa-icon [icon]="faSpinner" [spin]="true"></fa-icon>
-        Betöltés...
-      </p>
+<modal-window [(modalVisible)]="modalOpen" [allowClose]="false" [title]="'Üzenet'">
+    <div>
+        <div class="text-center p-3 border-top mt-2">
+            <p class="large">
+                Rendelés sikeresen leadva!
+            </p>
+        </div>
+        <div class="d-flex justify-content-end border-top pt-2">
+            <a [routerLink]="['/order-tracking']" class="btn btn-primary mx-1">Tovább</a>
+        </div>
     </div>
-  </modal-window> -->
+</modal-window>
