--- a/agora-angular/src/app/front-page/front-page.component.html
+++ b/agora-angular/src/app/front-page/front-page.component.html
@@ -10,11 +10,13 @@
                     </h1>
                 </div>
                 <h1 class="slogen m-2 mb-3">Vegyél helyi termékeket!</h1>
+                <a href="/search" class="btn btn-primary search-btn">
+                    <fa-icon [icon]="faSearch"></fa-icon>
+                    <span class="fw-bold">
+                        Keresés
+                    </span>
+                </a>
                 <div class="input-group justify-content-center mx-auto w-75">
-                    <a href="#" class="btn btn-primary search-btn">
-                        <fa-icon [icon]="faSearch"></fa-icon>
-                    </a>
-                    <input class="form-control search" type="search" placeholder="Keresés" aria-label="Search">
                 </div>
             </div>
         </div>
