--- a/agora-angular/src/app/product-detail/product-detail.component.html
+++ b/agora-angular/src/app/product-detail/product-detail.component.html
@@ -101,27 +101,6 @@
                                     <p>{{tag}}</p>
                                 </div>
                             </div>
-                            <!-- <div class="row mx-auto">
-                                <fa-icon [icon]="[iconPrefix,iconName]"></fa-icon>
-                                <div class="col-2 text-center">
-                                    <fa-icon [icon]="faHandPaper"></fa-icon>
-                                </div>
-                                <div class="ps-0 col-10">
-                                    <p>Kézzel készült</p>
-                                </div>
-                                <div class="col-2 text-center">
-                                    <fa-icon [icon]="faBalanceScale"></fa-icon>
-                                </div>
-                                <div class="ps-0 col-10">
-                                    <p>Etikusan beszerzett alapanyagok</p>
-                                </div>
-                                <div class="col-2 text-center">
-                                    <fa-icon [icon]="faTree"></fa-icon>
-                                </div>
-                                <div class="ps-0 col-10">
-                                    <p>Környezetbarát</p>
-                                </div>
-                            </div> -->
                         </div>
                         <div class="shadow rounded px-4 pt-3 pb-2 m-2 my-3">
                             <div class="row">
@@ -133,7 +112,7 @@
                                     </h5>
                                     <div class="btn-group">
                                         <a href="#" (click)="follow($event, seller.userId)" class="btn btn-primary my-2 px-2" [ngClass]="{'btn-primary':(!seller.iFollow),'btn-secondary':(seller.iFollow)}" [innerHTML]="seller.iFollow ? 'Követve' : 'Követés'">Követés</a>
-                                        <a href="/messages" class="btn my-2 pe-3" [ngClass]="{'btn-primary':(seller.iFollow),'btn-secondary':(!seller.iFollow)}">
+                                        <a (click)="notImplementedOpen = true" class="btn my-2 pe-3" [ngClass]="{'btn-primary':(seller.iFollow),'btn-secondary':(!seller.iFollow)}">
                                             <fa-icon [icon]="faEnvelope"></fa-icon>
                                         </a>
                                     </div>
@@ -147,7 +126,7 @@
                             <div *ngIf="seller.takesCustomOrders" class="row">
                                 <hr>
                                 <p>Egyedi rendeléseket is vállal.</p>
-                                <a href="#" class="btn btn-primary my-2 px-3">Rendelés</a>
+                                <a (click)="notImplementedOpen = true" class="btn btn-primary my-2 px-3">Rendelés</a>
                             </div>
                         </div>
                     </div>
@@ -239,4 +218,16 @@
 <!-- Kosárba -->
 <modal-window [(modalVisible)]="cartOpen">
     <add-to-cart (modalState)="cartOpen = false" [product]="product" [recommendedProducts]="productList"></add-to-cart>
+</modal-window>
+<modal-window [(modalVisible)]="notImplementedOpen" [title]="'Üzenet'">
+    <div>
+        <div class="text-center p-3 border-top mt-2">
+            <p class="large">
+                Ez a funkció sajnos még nem elérhető!
+            </p>
+        </div>
+        <div class="d-flex justify-content-end border-top pt-2">
+            <a (click)="notImplementedOpen = false" class="btn btn-primary mx-1">Ok</a>
+        </div>
+    </div>
 </modal-window>
