code cleanup, search bugfix

--- a/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.html
+++ b/agora-angular/src/app/my-profile/edit-profile/edit-profile.component.html
@@ -5,14 +5,11 @@
                 <div class="header" style="background-image: url('{{user.headerImgUrl}}');"></div>
                 <div class="mt-4">
                   <img class="p-2 round bg-white profile-picture shadow" src="{{user.profileImgUrl}}" alt="">
-                  <div class="btn bg-white my-2 profile-btn shadow" (click)="uploadOpen=true">
+                  <!-- <div class="btn bg-white my-2 profile-btn shadow" (click)="uploadOpen=true">
                       <fa-icon [icon]="faCamera"></fa-icon>
-                  </div>
+                  </div> -->
                 </div>
             </div>
-            <!-- <div class="col">
-                <img src="" alt="" src="{{user.headerImgUrl}}" class="header">
-            </div> -->
         </div>
         <div class="row">
             <div class="mb-3 col-12 col-md-6">
