code cleanup + bugfix

--- a/agora-angular/src/app/front-page/front-page.component.html
+++ b/agora-angular/src/app/front-page/front-page.component.html
@@ -23,7 +23,7 @@
     </div>
 </div>
 
-<div id="products" class="container justify-content-center justify-content-md-start">
+<div id="products" class="container justify-content-center justify-content-md-start page">
     <h2 class="main-header fw-bold mt-4">Ajánlatok neked</h2>
     <app-product-list [products]="products"></app-product-list>
 </div>
