dist + database + bugfix

--- a/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
+++ b/agora-angular/src/app/my-profile/my-product-list/my-product-list.component.html
@@ -27,7 +27,7 @@
     <div class="card my-3 shadow card-product">
         <div class="img-placeholder">
             <p *ngIf="!product.isPublic" class="warning text-center">
-                <fa-icon [icon]="faExclamationTriangle"></fa-icon> Ez a termék nem publikus. <a href=""
+                <fa-icon [icon]="faExclamationTriangle"></fa-icon> Ez a termék nem publikus. <a
                     class="text-dark">Tedd közzé.</a>
             </p>
             <img *ngIf="product.imgUrl != '' && product.imgUrl != null" src="{{product.imgUrl}}"
