--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -47,7 +47,7 @@
             <div *ngIf="user.takesCustomOrders" class="row">
                 <hr>
                 <p>Egyedi rendeléseket is vállal.
-                    <a href="#" class="text-decoration-none">Tudj meg többet.</a>
+                    <a class="text-decoration-none">Tudj meg többet.</a>
                 </p>
             </div>
         </div>
