--- a/agora-angular/src/app/nav/nav.component.html
+++ b/agora-angular/src/app/nav/nav.component.html
@@ -1,134 +1,97 @@
 <div>
-    <header
-        class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between pt-3 mb-3">
+  <header
+    class="container d-flex flex-wrap align-items-center justify-content-center justify-content-md-between pt-3 mb-3">
+    <a [routerLink]="['/']" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+      <img src="assets/logo.svg" class="me-2 logo-img" height="32" alt="">
+      <h3 class="mt-2 pt-1 logo-text">AGORA</h3>
+    </a>
 
-        <a [routerLink]="['/']" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <img src="assets/logo.svg" class="me-2 logo-img" height="32" alt="">
-            <h3 class="mt-2 pt-1 logo-text">AGORA</h3>
-        </a>
+    <ul *ngIf="isLoggedIn()" class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="#" (click)="toggleCategory($event)" [class.selected]="openView == 'category'"
+          class="nav-link-selectable nav-link px-2 link-dark">Kategóriák</a></li>
+      <li><a href="#" [routerLink]="['/best']" [class.selected]="_router.url == '/best'"
+          class="nav-link-selectable nav-link px-2 link-dark">A szezon legjobbjai</a></li>
+      <li><a href="#" [routerLink]="['/now']" [class.selected]="_router.url == '/now'"
+          class="nav-link-selectable nav-link px-2 link-dark">Most</a></li>
+    </ul>
 
-
-            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" (click)="toggleCategory($event)" [class.selected]="openView == 'category'"
-                        class="nav-link-selectable nav-link px-2 link-dark">Kategóriák</a></li>
-                <li><a href="#" [routerLink]="['/best']" [class.selected]="_router.url == '/best'"
-                        class="nav-link-selectable nav-link px-2 link-dark">A szezon legjobbjai</a></li>
-                <li><a href="#" [routerLink]="['/now']" [class.selected]="_router.url == '/now'"
-                        class="nav-link-selectable nav-link px-2 link-dark">Most</a></li>
-            </ul>
-
-            <div *ngIf="isLoggedIn()" class="col-md-3 text-end loggedin-nav">
-                <a [routerLink]="['/notifications']" class="btn p-1 m-1 btn-cart">
-                    <fa-layers [fixedWidth]="true" class="icon">
-                        <fa-icon [icon]="faBell"></fa-icon>
-                        <!-- <fa-layers-counter [content]="unreadNotifCount()"></fa-layers-counter> -->
-                        <fa-layers-counter *ngIf="unreadNotifCount() != '0'" [content]="unreadNotifCount()" class="notif"></fa-layers-counter>
-                    </fa-layers>
-                </a>
-                <a [routerLink]="['/cart']" class="btn p-1 m-1 btn-cart">
-                    <fa-layers [fixedWidth]="true" class="icon">
-                        <fa-icon [icon]="faShoppingCart"></fa-icon>
-                        <fa-layers-counter *ngIf="cartItemCount() != '0'" [content]="cartItemCount()" class="notif"></fa-layers-counter>
-                    </fa-layers>
-                </a>
-                <a (click)="toggleCart($event)" href="/my-profile" class="p-1 m-1">
-                    <img class="profile-nav" src="{{ currentUser().profile_picture_link }}" alt="">
-                </a>
-                <div *ngIf="menuOpen">
-                    <div class="menu-bg" (click)="toggleCart($event)"></div>
-                    <div class="rounded shadow menu">
-                        <ul class="list-unstyled mb-0">
-                            <li class="text-start m-2 mx-3">
-                                <p class="small m-0">Bejelentkezve mint <span class="fw-bold">{{currentUser().last_name}} {{currentUser().first_name}}</span> </p>
-                            </li>
-                            <li>
-                                <hr class="dropdown-divider m-0">
-                            </li>
-                            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/my-profile']" [queryParams]="{tab: 1}">Profil</a></li>
-                            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/my-profile']" [queryParams]="{tab: 2}">Kívánság lista</a></li>
-                            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/order-tracking']">Rendelés követés</a></li>
-                            <li *ngIf="currentUser().is_vendor"><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/order-management']">Bejövő rendelések</a></li>
-                            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/settings/address']" href="#">Szállítási címek</a></li>
-                            <li>
-                                <hr class="dropdown-divider m-0">
-                            </li>
-                            <li><a class="dropdown-item rounded-bottom" (click)="logout()">Kilépés</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-
+    <div *ngIf="isLoggedIn()" class="col-md-3 text-end loggedin-nav">
+      <a [routerLink]="['/notifications']" class="btn p-1 m-1 btn-cart">
+        <fa-layers [fixedWidth]="true" class="icon">
+          <fa-icon [icon]="faBell"></fa-icon>
+          <fa-layers-counter *ngIf="unreadNotifCount() != '0'" [content]="unreadNotifCount()" class="notif">
+          </fa-layers-counter>
+        </fa-layers>
+      </a>
+      <a [routerLink]="['/cart']" class="btn p-1 m-1 btn-cart">
+        <fa-layers [fixedWidth]="true" class="icon">
+          <fa-icon [icon]="faShoppingCart"></fa-icon>
+          <fa-layers-counter *ngIf="cartItemCount() != '0'" [content]="cartItemCount()" class="notif">
+          </fa-layers-counter>
+        </fa-layers>
+      </a>
+      <a (click)="toggleCart($event)" href="/my-profile" class="p-1 m-1">
+        <img class="profile-nav" src="{{ currentUser().profile_picture_link }}" alt="">
+      </a>
+      <div *ngIf="menuOpen">
+        <div class="menu-bg" (click)="toggleCart($event)"></div>
+        <div class="rounded shadow menu">
+          <ul class="list-unstyled mb-0">
+            <li class="text-start m-2 mx-3">
+              <p class="small m-0">Bejelentkezve mint <span class="fw-bold">{{currentUser().last_name}}
+                  {{currentUser().first_name}}</span> </p>
+            </li>
+            <li>
+              <hr class="dropdown-divider m-0">
+            </li>
+            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/my-profile']"
+                [queryParams]="{tab: 1}">Profil</a></li>
+            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/my-profile']"
+                [queryParams]="{tab: 2}">Kívánság lista</a></li>
+            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/order-tracking']">Rendelés
+                követés</a></li>
+            <li *ngIf="currentUser().is_vendor"><a class="dropdown-item" (click)="toggleCart($event)"
+                [routerLink]="['/order-management']">Bejövő rendelések</a></li>
+            <li><a class="dropdown-item" (click)="toggleCart($event)" [routerLink]="['/settings/address']"
+                href="#">Szállítási címek</a></li>
+            <li>
+              <hr class="dropdown-divider m-0">
+            </li>
+            <li><a class="dropdown-item rounded-bottom" (click)="logout()">Kilépés</a></li>
+          </ul>
         </div>
-        <div *ngIf="isLoggedIn() == false" class="col-md-3 text-end">
-            <a [routerLink]="['/signup-vendor']" class="btn p-1 m-1 btn-sell">Eladok</a>
-            <a href="/login" class="btn p-1 m-1 btn-login">Belépés</a>
-        </div>
-    </header>
+      </div>
+    </div>
+    <div *ngIf="isLoggedIn() == false" class="col-md-3 text-end">
+      <a [routerLink]="['/signup']" class="btn p-1 m-1 btn-sell">Eladok</a>
+      <a [routerLink]="['/login']" class="btn p-1 m-1 btn-login">Belépés</a>
+    </div>
+  </header>
 </div>
 <div [ngSwitch]="openView">
-    <div @toggleMenu *ngSwitchCase="'category'">
-        <div class="col-12 container pb-4">
-            <div class="row">
-                <div *ngFor="let category of categories" class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div [routerLink]="['/search']" [queryParams]="{category:category}" (click)="openView = ''" class="card card-category">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <fa-icon [icon]="[iconPrefix, (category|icon:'category')]"></fa-icon>
-                            <p class="card-text m-0">{{ category }}</p>
-                        </div>
-                    </div>
-                </div>
-                <div [routerLink]="['/search']" (click)="openView = ''" class="col-6 col-md-3 col-lg-2 mb-3">
-                    <a class="text-decoration-none text-dark">
-                        <div class="card card-category">
-                            <div class="hstack gap-2 card-body mx-auto">
-                                <fa-icon [icon]="faBoxes"></fa-icon>
-                                <p class="card-text m-0">Összes</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
+  <div @toggleMenu *ngSwitchCase="'category'">
+    <div class="col-12 container pb-4">
+      <div class="row">
+        <div *ngFor="let category of categories" class="col-6 col-md-3 col-lg-2 mb-3">
+          <div [routerLink]="['/search']" [queryParams]="{category:category}" (click)="openView = ''"
+            class="card card-category">
+            <div class="hstack gap-2 card-body mx-auto">
+              <fa-icon [icon]="[iconPrefix, (category|icon:'category')]"></fa-icon>
+              <p class="card-text m-0">{{ category }}</p>
             </div>
+          </div>
         </div>
-    </div>
-    <div @toggleMenu *ngSwitchCase="'now'">
-        <div class="col-12 container pb-4">
-            <div class="row">
-                <div class="col-12 col-md-5 col-lg-4 mb-3">
-                    <div class="card bg-dark text-white fw-bold card-now border-none">
-                        <img src="assets/market.jpg" class="card-img card-now" alt="...">
-                        <div class="card-img-overlay">
-                            <div class="frosted-glass m-0 p-2 card-now-body">
-                                <h5 class="card-title p-1 mb-0 pb-0">#esemeny #most</h5>
-                                <p class="card-text p-1">Termelői piac Tatabányán</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-5 col-lg-4 mb-3">
-                    <div class="card bg-dark text-white fw-bold card-now border-none">
-                        <img src="assets/karacsonyivasar.jpg" class="card-img card-now" alt="...">
-                        <div class="card-img-overlay">
-                            <div class="frosted-glass m-0 p-2 card-now-body">
-                                <h5 class="card-title p-1 mb-0 pb-0">#onlinepiacter #ajandek</h5>
-                                <p class="card-text p-1">Online karácsonyi vásár</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <div [routerLink]="['/search']" (click)="openView = ''" class="col-6 col-md-3 col-lg-2 mb-3">
+          <a class="text-decoration-none text-dark">
+            <div class="card card-category">
+              <div class="hstack gap-2 card-body mx-auto">
+                <fa-icon [icon]="faBoxes"></fa-icon>
+                <p class="card-text m-0">Összes</p>
+              </div>
             </div>
+          </a>
         </div>
+      </div>
     </div>
-    <div @toggleMenu *ngSwitchCase="'best'">
-        <div class="col-12 container pb-4">
-            <div class="row">
-                <div class="col-6 col-md-3 col-lg-2 mb-3">
-                    <div class="card card-category-product">
-                        <div class="hstack gap-2 card-body mx-auto">
-                            <p class="card-text m-0">Divat</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  </div>
 </div>
